# raven

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Implementation_Plan.md  LICENSE  Makefile  README.md  RELEASING.md  cover.out  go.mod  go.sum
.cursor/: rules
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/rvn/: main.go
docs/: AGENT_GUIDE.md  AGENT_INTERFACE.md  BULK_OPERATIONS_SPEC.md  FUTURE.md  LSP_DESIGN.md  MIGRATIONS.md  QUERY_LOGIC.md  README.md  RELEASING.md  SPECIFICATION.md  WORKFLOWS_SPEC.md  agent_improvements.md  embed.go  index.yaml
docs/agents/: mcp.md
docs/design/: architecture.md  database.md  design-review.md  future.md  lsp.md  migrations.md  onboarding-metrics.md  parsing.md  query-language-v2.md
docs/getting-started/: agent-setup.md  configuration.md  core-concepts.md  first-vault.md  getting-started.md  installation.md
docs/guide/: agent-guide.md  agents.md  cli-advanced.md  cli-basics.md  cli.md  configuration.md  core-concepts.md  getting-started.md  schema-intro.md  templates.md  workflows.md
docs/querying/: internals.md  query-language.md
docs/reference/: bulk-operations.md  cli.md  file-format.md  lessons.md  mcp.md  query-language.md  schema.md  vault-config.md  workflows.md
docs/types-and-traits/: file-format.md  references.md  schema-intro.md  schema.md  templates.md
docs/workflows/: workflows.md
scripts/: merge_coverprofiles.go
src/: config.rs  main.rs
test_vault/: schema.yaml
testdata/: raven.yaml  schema.yaml
(+642 files in other folders)
