[package]
name = "raven"
version = "0.1.0"
edition = "2021"
description = "A personal knowledge system with typed blocks, traits, and powerful querying"
license = "MIT"

[[bin]]
name = "rvn"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Markdown parsing
pulldown-cmark = "0.12"

# Pattern matching
regex = "1"
lazy_static = "1"

# File system
walkdir = "2"
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Text processing
slug = "0.1"

[dev-dependencies]
tempfile = "3"